# CopilotModelGateway

./: .env.example  .gitignore  LICENSE  README.md  gateway.bat  gateway.ps1  publish.bat  publish.ps1  pyproject.toml
.github/workflows/: ci.yml
config/: gateway.example.yaml
scripts/: publish-to-github.ps1  setup.ps1
src/copilot_model_gateway/: __init__.py  cli.py  client.py  dashboard.py  generator.py  ollama_bridge.py  process.py  provider_extensions.py  quota_dashboard.py  settings.py  visual_studio_bridge.py
tests/: test_dashboard.py  test_generator.py  test_provider_extensions.py  test_quota_dashboard.py  test_settings.py
web/: alerts.css  alerts.js  app.js  gateway-controls.js  index.html  provider-quotas.css  provider-quotas.js  styles.css
